2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.[ch]:
        Add nautilus_directory_get_location

        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_parent_location.
	Port from eel_format_uri_for_display to gio parse names
	
        * libnautilus-private/nautilus-program-choosing.c:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-emblem-sidebar.c:
        * src/nautilus-location-bar.c:
        * src/nautilus-location-dialog.c:
        * src/nautilus-navigation-window-menus.c:
        * src/nautilus-window-bookmarks.c:
	Port from eel_format_uri_for_display to gio parse names

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.c:
        (nautilus_ensure_unique_file_name):
	Port from gnome-vfs
	
        * src/file-manager/fm-directory-view.c:
        (fm_directory_view_handle_netscape_url_drop):
	Handle missing mimetype

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.c:
        (nautilus_compute_title_for_location):
	Make this use only display name.
	
        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_lookup):
	Don't free filename before use
	
        * libnautilus-private/nautilus-search-directory-file.[ch]:
        * libnautilus-private/nautilus-search-directory.c:
	Create nice display name for search directories, and keep it updated.
	
        * src/nautilus-window-manage-views.c:
	Fix wrong type of argument passed to signal

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Replace some gnome vfs calls

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-metafile.c:
	Use new gio uri escape functions instead of gnome-vfs

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-location-entry.c:
	Use GFilenameCompleter
