@@ -510,7 +510,10 @@ receive_dropped_uri_list (NautilusInformationPanel *information_panel,
 							    NULL);
 			}
 		} else {	
-			if (eel_is_remote_uri (uris[0])) {
+			GFile *f;
+
+			f = g_file_new_for_uri (uris[0]);
+			if (!g_file_is_native (f)) {
 				eel_show_error_dialog (
 					_("The file that you dropped is not local."),
 					_("You can only use local images as custom icons."), 
@@ -522,6 +525,7 @@ receive_dropped_uri_list (NautilusInformationPanel *information_panel,
 					_("You can only use images as custom icons."),
 					window);
 			}
+			g_object_unref (f);
 		}	
 		break;
 	}
